--- a/src/MainForm.css
+++ b/src/MainForm.css
@@ -20,7 +20,7 @@
     margin-top: 200px;
     padding: 30px 0px;
     box-sizing: border-box;
-    animation: fadeIn 1500ms ease-out;
+    animation: blurFadeIn 1500ms ease-out;
 }
 
 .form-container {
@@ -94,18 +94,28 @@
     opacity: 0.5;
 }
 
+.sub-button:active {
+    cursor: pointer;
+    background-color: rgb(243, 239, 190);
+    color: rgb(110, 53, 110);
+    filter: drop-shadow(0px 0px 5px var(--yellow));
+    border: 2px solid rgb(110, 53, 110);
+}
+
 .form-error {
     animation: blink 1s linear;
 }
 
-@keyframes fadeIn {
+@keyframes blurFadeIn {
     from {
         transform: scale(0.9);
+        filter: blur(5px);
         opacity: 0;
     }
 
     to {
         transform: scale(1);
+        filter: blur(0px);
         opacity: 1;
     }
 }
